<?xml version="1.0"?>
<package format="3">
  <name>mapless_navigation</name>
  <version>0.0.1</version>
  <description>Mapless navigation node</description>

  <maintainer email="etcetra7n@gmail.com">John Anchery</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
